Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Sang Việt Nam du lịch rồi cướp tài sản, một người Hàn Quốc lãnh 7 năm tù",
+    "content": "Ngày 12-3, TAND TP.HCM đã tuyên phạt Jang Jae Bin, một người Hàn Quốc có quốc tịch Canada, 7 năm tù về tội cướp tài sản. Jang đã nhập cảnh vào Việt Nam để du lịch và do không có tiền tiêu xài, đã thực hiện hai vụ cướp tài sản bằng cách sử dụng dao đe dọa và chiếm đoạt hai điện thoại di động trị giá 5,4 triệu đồng từ hai người nước ngoài. Vụ việc này đã thu hút sự chú ý về vấn đề an ninh và tội phạm trong lĩnh vực du lịch.",
+    "link": "https://tuoitre.vn/sang-viet-nam-du-lich-roi-cuop-tai-san-mot-nguoi-han-quoc-lanh-7-nam-tu-2025031211470695.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao Jang Jae Bin bị tuyên án 7 năm tù?",
+    "answers": [
+      {
+        "text": "Vì cướp tài sản",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp",
+        "correct": false
+      },
+      {
+        "text": "Vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Vì buôn bán ma túy",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đội ngũ y tế của Maradona hầu tòa vì cáo buộc giết người",
     "content": "Đội ngũ y tế chăm sóc cho Diego Maradona trước khi ông qua đời đang đối mặt với cáo buộc giết người tại tòa án Argentina. Bảy nhân viên y tế, bao gồm bác sĩ và y tá, bị buộc tội đã không thực hiện các biện pháp cần thiết để cứu sống Maradona, mặc dù biết tình trạng sức khỏe của ông nghiêm trọng. Nếu bị kết tội, các bị cáo có thể phải đối mặt với án tù từ 8 đến 25 năm. Phiên tòa dự kiến sẽ kéo dài và có hơn 100 nhân chứng sẽ ra làm chứng.",
     "link": "https://vnexpress.net/doi-ngu-y-te-cua-maradona-hau-toa-vi-cao-buoc-giet-nguoi-4860267.html",
@@ -582,6 +609,60 @@
       },
       {
         "text": "Trường Đại học Công nghệ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ba Lan mua thêm hàng nghìn hệ thống Starlink cho Ukraine",
+    "content": "Chính phủ Ba Lan đã công bố kế hoạch mua thêm 5.000 thiết bị đầu cuối Starlink để cung cấp Internet cho Ukraine, nhằm đảm bảo kết nối ổn định trong bối cảnh xung đột. Trước đó, Ba Lan đã cung cấp khoảng 30.000 thiết bị Starlink cho Ukraine, với mục tiêu giữ cho thông tin liên lạc không bị gián đoạn. Ngoại trưởng Ba Lan cũng đã cảnh báo về khả năng tìm nhà cung cấp khác nếu Starlink của Elon Musk không còn đáng tin cậy.",
+    "link": "https://dantri.com.vn/the-gioi/ba-lan-mua-them-hang-nghin-he-thong-starlink-cho-ukraine-20250312101549344.htm",
+    "cat": "the-gioi",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Ba Lan đã mua bao nhiêu thiết bị Starlink cho Ukraine?",
+    "answers": [
+      {
+        "text": "5.000",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "30.000",
+        "correct": false
+      },
+      {
+        "text": "50.000",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm gì giảm mỡ bụng tuổi trung niên?",
+    "content": "Phụ nữ trung niên thường gặp tình trạng béo bụng do thay đổi sinh lý. Để giảm mỡ bụng, việc kết hợp ăn uống lành mạnh và tập thể dục đều đặn là rất quan trọng. Những biện pháp này giúp duy trì vòng eo thon gọn và cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/lam-gi-giam-mo-bung-tuoi-trung-nien-4860196.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giảm mỡ bụng cho phụ nữ trung niên?",
+    "answers": [
+      {
+        "text": "Ăn uống lành mạnh và tập thể dục đều đặn.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần ăn ít hơn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tập thể dục mà không cần thay đổi chế độ ăn.",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng thuốc giảm cân mà không cần thay đổi gì.",
         "correct": false
       }
     ]
@@ -1047,6 +1128,37 @@
     ]
   },
   {
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "answers": [
+      {
+        "text": "Bệnh sởi",
+        "correct": true
+      },
+      {
+        "text": "Ngộ độc thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Nhiễm trùng đường tiêu hóa",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -1096,37 +1208,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến gan mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
-    "answers": [
-      {
-        "text": "Bệnh sởi",
-        "correct": true
-      },
-      {
-        "text": "Ngộ độc thực phẩm",
-        "correct": false
-      },
-      {
-        "text": "Nhiễm trùng đường tiêu hóa",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -4216,33 +4297,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -4265,6 +4319,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -4444,33 +4525,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -4493,6 +4547,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -4864,33 +4945,6 @@
       },
       {
         "text": "180 km",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tài xế độ đèn gây lóa mắt người đi đường",
-    "content": "Tình trạng tài xế lắp đèn độ gây lóa mắt người đi đường tại Hà Nội đang gia tăng, đặc biệt là trên các tuyến đường có nhiều xe tải và xe khách. Nhiều tài xế lắp thêm đèn trợ sáng với cường độ ánh sáng cao, khiến người đi đường gặp khó khăn trong việc quan sát. Cảnh sát giao thông đã tiến hành kiểm tra và xử phạt nhiều trường hợp vi phạm này, nhấn mạnh rằng việc lắp đèn không đúng quy định sẽ bị phạt nặng và yêu cầu tháo bỏ thiết bị không hợp lệ.",
-    "link": "https://vnexpress.net/tai-xe-do-den-gay-loa-mat-nguoi-di-duong-4857538.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao tài xế lại lắp đèn độ trên xe của họ?",
-    "answers": [
-      {
-        "text": "Để quan sát đường sá dễ hơn.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ xe.",
-        "correct": false
-      },
-      {
-        "text": "Để làm đẹp cho xe.",
         "correct": false
       }
     ]
