Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ôtô 7 chỗ đua giảm giá hàng chục triệu đồng",
+    "content": "Trong tháng 3 năm 2025, các mẫu ô tô 7 chỗ như Mitsubishi Xpander, Toyota Veloz, Honda BR-V và Suzuki XL7 đã đồng loạt giảm giá, với mức giảm từ 28 đến 70 triệu đồng thông qua các chương trình khuyến mãi và hỗ trợ lệ phí trước bạ. Cuộc đua doanh số trong phân khúc MPV cỡ nhỏ hạng B trở nên gay gắt hơn khi nhiều hãng xe tung ra các ưu đãi hấp dẫn nhằm thu hút khách hàng. Xpander tiếp tục dẫn đầu doanh số trong phân khúc MPV, với 1.861 xe được bán ra, vượt xa đối thủ Veloz với chỉ 334 xe.",
+    "link": "https://vnexpress.net/oto-7-cho-dua-giam-gia-hang-chuc-trieu-dong-4860184.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao ô tô 7 chỗ lại giảm giá trong tháng 3 năm 2025?",
+    "answers": [
+      {
+        "text": "Để thu hút khách hàng trong cuộc đua doanh số.",
+        "correct": true
+      },
+      {
+        "text": "Vì sản phẩm không được ưa chuộng.",
+        "correct": false
+      },
+      {
+        "text": "Do chi phí sản xuất tăng cao.",
+        "correct": false
+      },
+      {
+        "text": "Để chuẩn bị cho mẫu xe mới ra mắt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sang Việt Nam du lịch rồi cướp tài sản, một người Hàn Quốc lãnh 7 năm tù",
     "content": "Ngày 12-3, TAND TP.HCM đã tuyên phạt Jang Jae Bin, một người Hàn Quốc có quốc tịch Canada, 7 năm tù về tội cướp tài sản. Jang đã nhập cảnh vào Việt Nam để du lịch và do không có tiền tiêu xài, đã thực hiện hai vụ cướp tài sản bằng cách sử dụng dao đe dọa và chiếm đoạt hai điện thoại di động trị giá 5,4 triệu đồng từ hai người nước ngoài. Vụ việc này đã thu hút sự chú ý về vấn đề an ninh và tội phạm trong lĩnh vực du lịch.",
     "link": "https://tuoitre.vn/sang-viet-nam-du-lich-roi-cuop-tai-san-mot-nguoi-han-quoc-lanh-7-nam-tu-2025031211470695.htm",
@@ -863,6 +890,33 @@
     ]
   },
   {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -916,33 +970,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
