Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Búi tóc nặng gần 1 kg trong dạ dày bé gái",
+    "content": "Bé gái 12 tuổi ở Quảng Ngãi đã phải phẫu thuật lấy ra một búi tóc nặng gần 1 kg trong dạ dày, do tự ăn tóc trong thời gian dài mà gia đình không phát hiện. Sau khi nhập viện với tình trạng da xanh xao và bụng cứng, bác sĩ đã chẩn đoán bé bị viêm loét dạ dày tá tràng và khối u tóc. Việc ăn tóc (trichophagia) là một rối loạn ăn uống hiếm gặp, thường liên quan đến các vấn đề tâm lý và có thể gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/bui-toc-nang-gan-1-kg-trong-da-day-be-gai-4860318.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Búi tóc nặng gần 1 kg trong dạ dày bé gái là do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Bé đã tự ăn tóc trong thời gian dài",
+        "correct": true
+      },
+      {
+        "text": "Bé ăn phải tóc trong thức ăn",
+        "correct": false
+      },
+      {
+        "text": "Bé bị ngộ độc thực phẩm",
+        "correct": false
+      },
+      {
+        "text": "Bé không ăn uống đầy đủ dinh dưỡng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ôtô 7 chỗ đua giảm giá hàng chục triệu đồng",
     "content": "Trong tháng 3 năm 2025, các mẫu ô tô 7 chỗ như Mitsubishi Xpander, Toyota Veloz, Honda BR-V và Suzuki XL7 đã đồng loạt giảm giá, với mức giảm từ 28 đến 70 triệu đồng thông qua các chương trình khuyến mãi và hỗ trợ lệ phí trước bạ. Cuộc đua doanh số trong phân khúc MPV cỡ nhỏ hạng B trở nên gay gắt hơn khi nhiều hãng xe tung ra các ưu đãi hấp dẫn nhằm thu hút khách hàng. Xpander tiếp tục dẫn đầu doanh số trong phân khúc MPV, với 1.861 xe được bán ra, vượt xa đối thủ Veloz với chỉ 334 xe.",
     "link": "https://vnexpress.net/oto-7-cho-dua-giam-gia-hang-chuc-trieu-dong-4860184.html",
@@ -1271,32 +1298,28 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
     "cat": "suc-khoe",
-    "positivity": 6,
+    "positivity": 5,
     "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
     "answers": [
       {
-        "text": "Bệnh sởi",
+        "text": "Suy gan cấp và biến chứng thần kinh",
         "correct": true
       },
       {
-        "text": "Ngộ độc thực phẩm",
+        "text": "Chỉ gây triệu chứng nhẹ",
         "correct": false
       },
       {
-        "text": "Nhiễm trùng đường tiêu hóa",
+        "text": "Không có biến chứng gì",
         "correct": false
       },
       {
-        "text": "Viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Sốt xuất huyết",
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -1329,28 +1352,32 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
     "cat": "suc-khoe",
-    "positivity": 5,
+    "positivity": 6,
     "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
     "answers": [
       {
-        "text": "Suy gan cấp và biến chứng thần kinh",
+        "text": "Bệnh sởi",
         "correct": true
       },
       {
-        "text": "Chỉ gây triệu chứng nhẹ",
+        "text": "Ngộ độc thực phẩm",
         "correct": false
       },
       {
-        "text": "Không có biến chứng gì",
+        "text": "Nhiễm trùng đường tiêu hóa",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
@@ -3489,6 +3516,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -3515,33 +3569,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -4440,33 +4467,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -4516,6 +4516,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -4972,33 +4999,6 @@
       },
       {
         "text": "Nhiễm trùng đường ruột",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cà phê Việt trước quy định phòng chống phá rừng của EU",
-    "content": "Cà phê Việt Nam đang nỗ lực hoàn thiện hệ thống truy xuất nguồn gốc để đáp ứng quy định chống phá rừng của EU (EUDR) có hiệu lực từ 2026. EUDR yêu cầu cà phê xuất khẩu vào EU phải chứng minh không liên quan đến nạn phá rừng sau 31-12-2020, điều này tạo ra nhiều thách thức cho doanh nghiệp. Bộ Nông nghiệp và Môi trường đã triển khai hệ thống dữ liệu cho các vùng trồng cà phê để hỗ trợ doanh nghiệp và nông dân tuân thủ quy định này.",
-    "link": "https://tuoitre.vn/ca-phe-viet-truoc-quy-dinh-phong-chong-pha-rung-cua-eu-20250311120203543.htm",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Cà phê Việt Nam đang làm gì để đáp ứng quy định EUDR của EU?",
-    "answers": [
-      {
-        "text": "Hoàn thiện hệ thống truy xuất nguồn gốc.",
-        "correct": true
-      },
-      {
-        "text": "Giảm sản lượng cà phê xuất khẩu.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sử dụng thuốc bảo vệ thực vật.",
-        "correct": false
-      },
-      {
-        "text": "Tìm kiếm thị trường mới ngoài EU.",
         "correct": false
       }
     ]
