--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Ôtô bốc cháy trên đường, cửa ngõ TP HCM ùn tắc 3 km",
+    "content": "Vào trưa ngày 12/3, một chiếc ôtô 7 chỗ bất ngờ bốc cháy trên quốc lộ 1 qua TP Thủ Đức, gây ra tình trạng ùn tắc giao thông kéo dài 3 km. Tài xế đã kịp dừng xe và thoát ra ngoài trước khi ngọn lửa bùng phát dữ dội, thiêu rụi hoàn toàn chiếc xe. Lực lượng cứu hỏa đã có mặt để dập lửa sau khoảng 15 phút, nhưng ôtô đã bị thiêu rụi chỉ còn lại khung xe.",
+    "link": "https://vnexpress.net/oto-boc-chay-tren-duong-cua-ngo-tp-hcm-un-tac-3-km-4860334.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Nguyên nhân gây ra ùn tắc giao thông tại TP HCM là gì?",
+    "answers": [
+      {
+        "text": "Ôtô bốc cháy trên đường",
+        "correct": true
+      },
+      {
+        "text": "Mưa lớn kéo dài",
+        "correct": false
+      },
+      {
+        "text": "Công trình sửa chữa đường",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông giữa hai xe",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ôtô 7 chỗ đua giảm giá hàng chục triệu đồng",
     "content": "Trong tháng 3 năm 2025, các mẫu ô tô 7 chỗ như Mitsubishi Xpander, Toyota Veloz, Honda BR-V và Suzuki XL7 đã đồng loạt giảm giá, với mức giảm từ 28 đến 70 triệu đồng thông qua các chương trình khuyến mãi và hỗ trợ lệ phí trước bạ. Cuộc đua doanh số trong phân khúc MPV cỡ nhỏ hạng B trở nên gay gắt hơn khi nhiều hãng xe tung ra các ưu đãi hấp dẫn nhằm thu hút khách hàng. Xpander tiếp tục dẫn đầu doanh số trong phân khúc MPV, với 1.861 xe được bán ra, vượt xa đối thủ Veloz với chỉ 334 xe.",
     "link": "https://vnexpress.net/oto-7-cho-dua-giam-gia-hang-chuc-trieu-dong-4860184.html",
@@ -1002,33 +1029,6 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -1055,6 +1055,33 @@
       },
       {
         "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
